--- a/index.html
+++ b/index.html
@@ -11,16 +11,24 @@
 </head>
 <body>
         <div id="slides">
+
+            <div class="overlay"></div>
+
+
             <div class="slides-container">
-            <img src="/IMG/Background_image1.jpg" alt="">
-            <img src="/IMG/backgroundimage_1.jpg" alt="">
+                <img src="/IMG/Background_image1.jpg" alt="">
+                <img src="/IMG/backgroundimage_1.jpg" alt="">
             </div>
+        
+
+            <nav class="slides-navigation">
+                <a href="#" class="next"></a>
+                <a href="#" class="prev"></a>
+            </nav>
+
         </div>
 
-        <nav class="slides-navigation">
-            <a href="#" class="next"></a>
-            <a href="#" class="prev"></a>
-        </nav>
+
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.min.js" integrity="sha384-cn7l7gDp0eyniUwwAZgrzD06kc/tftFf19TOAs2zVinnD/C7E91j9yyk5//jjpt/" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
